修改门店编辑验证门店是否存在

--- a/WebContent/crm/dynamicData_tinyvillage.html
+++ b/WebContent/crm/dynamicData_tinyvillage.html
@@ -152,7 +152,7 @@
 
 <!--              </datalist> -->
 					<input id="store_id_area" name="store_id_area" type="hidden" value=""/>
-				  <input type="text" class="form-control"  placeholder="门店" id="store_name_area" style="border-radius: 6px; box-shadow: 0 1px 1px rgba(0,0,0,0.3);width: 90%""/>
+				  <input type="text" class="form-control"  placeholder="门店" id="store_name_area" style="border-radius: 6px; box-shadow: 0 1px 1px rgba(0,0,0,0.3);width: 90%"/>
 	              <div class="auto hidden" id="auto_store" style="width:82%;z-index: 99999;">
 	              </div>
               <!-- /.input group -->
@@ -638,7 +638,7 @@
     			  $("#process_div").hide();
     		      $("#process_div_pic").hide();
     		  },
-    		  cancel: function(index, layero){ 
+    		  cancel: function(index, layero){
     			 layer.close(index);
     			}  
     		});  
