--- a/WebContent/data_access/add_store.html
+++ b/WebContent/data_access/add_store.html
@@ -668,7 +668,7 @@ function downloadFile(pic_name){
 		
 		}
 		  if(id==null||id=='undefined'){
-			  var brr = [ "cityName","name"];
+			  var brr = [ "cityName","name","store_id"];
 			  var e = {};
 				for ( var i in brr) {
 					var v = brr[i];
