--- a/WebContent/data_access/store_list.html
+++ b/WebContent/data_access/store_list.html
@@ -133,7 +133,7 @@ layer.config({
    //导出门店台账
    
    function exportExcel(){
-	   if(JSZ=='MDXZTXJSZ'||JSZ=='MDCBTXJSZ'||JSZ=='GLY'||JSZ=='MDCBSHJSZ'||JSZ=='MDXZSHJSZ'||JSZ=='CSMDGLZ'||JSZ=='QYJL'||JSZ=='ZBCSGLBYHGLJSZ'||JSZ=='ZBCSGLB'||JSZ=='CSMDGLZ'||JSZ=='MDGLYJSZ'){
+	   if(JSZ=='MDXZTXJSZ'||JSZ=='MDCBTXJSZ'||JSZ=='GLY'||JSZ=='MDCBSHJSZ'||JSZ=='MDXZSHJSZ'||JSZ=='CSMDGLZ'||JSZ=='QYJL'||JSZ=='ZBCSGLBYHGLJSZ'||JSZ=='ZBCSGLB'||JSZ=='CSMDGLZ'||JSZ=='MDGLYJSZ'||JSZ=='ZBXXWLBJJSZ'){
 		   var path = getRootPath();
 		   window.open(path + "/downloadExcel.action"
 					  +"?fileName="+"store_list_info"); 
