--- a/WebContent/crm/index_city_net.html
+++ b/WebContent/crm/index_city_net.html
@@ -160,7 +160,7 @@
            
             <div class="clearfix" style="text-indent: 2em;line-height:26px;">
             <div class="clearfix">
-              <p class="col-sm-6">截止目前门店开业情况<span id="storeInfoOfCity"></span></p><p class="col-sm-6">截止目前,全国门店数量共计<span id="china_store_count" class="text-red"></span>家，其中合作店<span id="cooperative_count" class="text-red"></span>家</p>
+              <p class="col-sm-6">截止目前门店开业情况，<span id="storeInfoOfCity"></span></p><p class="col-sm-6">截止目前,全国门店数量共计<span id="china_store_count" class="text-red"></span>家，其中合作店<span id="cooperative_count" class="text-red"></span>家；</p>
               </div>
               <div class="col-sm-6" id="main2" style="height: 500px;"></div>
               <div class="col-sm-6" id="main10" style="height: 500px;"></div>
