--- a/WebContent/data_access/village_add.html
+++ b/WebContent/data_access/village_add.html
@@ -73,6 +73,7 @@ var pro_id;
 		})
 		
 	function dataCheck() {
+		$("#submit").attr("disabled","true");
 		var name=$("#name").val().replace(/(^\s*)|(\s*$)/g, "");
 		var gb_code=$("#gb_code").val();
 		var town_id=$("#town_id").val();
@@ -84,6 +85,7 @@ var pro_id;
 				for(i=0;i<oo.length;i++){
 					var zwse=oo[i].split("-");
 					if(zwse[1]=="请选择"){
+						$("#submit").removeAttr("disabled");
 						alert("请选择职务!");
 						return;
 					}
@@ -91,23 +93,28 @@ var pro_id;
 			}
 		}
 		if(town_name == "" || town_name == null){
+			$("#submit").removeAttr("disabled");
 			alert("请输入街道名称!");
 			return;
 		}
 		if(town_id == "" || town_id == null){
+			$("#submit").removeAttr("disabled");
 			alert("请输入正确的街道名称!");
 			return;
 		}
 		if(name == "" || name == null){
+			$("#submit").removeAttr("disabled");
 			alert("请输入社区名称!");
 			return;
 		}
 		if(gb_code == "" || gb_code == null){
+			$("#submit").removeAttr("disabled");
 			alert("请输入社区国标码!");
 			return;
 		}else{
 			var  c=gb_code.length;
 			if(c!=12){
+				$("#submit").removeAttr("disabled");
 				alert("社区国标码必须为12位的数字!");
 				return;
 			}
@@ -120,11 +127,13 @@ var pro_id;
 				textStatus, XMLHttpRequest) {
 			if (data.result) {
 				if(data.data!="null"){
+					$("#submit").removeAttr("disabled");
 					alert("社区已存在!");
 					return false;
 				}
 				doSave();
 			} else {
+				$("#submit").removeAttr("disabled");
 				$$.showMessage("系统信息", "信息加载异常");
 				return false;
 			}
@@ -147,6 +156,7 @@ var pro_id;
 						alert("添加成功！");
 						window.location.href = 'village_list.html';
 					} else {
+						$("#submit").removeAttr("disabled");
 						$$.showMessage("系统信息", "添加失败!");
 					}
 				});
@@ -293,7 +303,7 @@ var pro_id;
 	<div class="panel panel-primary" style="margin: 10px 5px 0 5px">
     <div class="panel-heading">社区信息添加
         <span class="but">
-			<input name="" type="submit" onclick="dataCheck();" value="保存">
+			<input name="" type="submit" id="submit" onclick="dataCheck();" value="保存">
 			<input name="" type="button" onclick="javascript:history.go(-1);" value="返回">
 		</span>
     </div>
