--- a/WebContent/crm/user_member_view.html
+++ b/WebContent/crm/user_member_view.html
@@ -202,14 +202,14 @@
               <!-- /.input group -->
               </div>
             </div>
-            <!-- <div class="form-group col-lg-4">
+            <div class="form-group col-lg-4">
               <label>门店</label>
 			  <input id="store_id_tradetype" name="store_id_tradetype" type="hidden" value=""/>
 			  <input type="text" class="form-control"  placeholder="门店" id="store_name_tradetype" style="border-radius: 6px; box-shadow: 0 1px 1px rgba(0,0,0,0.3);width: 90%""/>
               <div class="auto hidden" id="auto_store" style="width:82%;z-index: 99999;">
               </div>
-              /.input group
-            </div> -->
+              <!-- /.input group -->
+            </div>
             </form>
             <div class="form-group col-lg-6" style="margin-top: 20px; padding: 0 25px;">
             </div>
