--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -324,7 +324,9 @@
         <!--历史数据-->
       <div class="info_bottom" style="width: 25%; float:right; position: relative;">
       <div class="box no-border">
-        <div class="col-sm-6">
+      <div class="box-header h4 text-right" style="margin-bottom: -20px; margin-top:0;font-size: 12px;color: #747474;cursor: pointer;" id="customer_analysis_more">更多</div>
+          <div class="box-body no-padding">
+          <div class="info_bottom_dl info_bottom_right col-sm-6 pull-right ">
             <h4 class="gaugetb2" id="sing_id_1">本月用户量</h4>
             <input type="hidden" id="tradesumofmonthCustmomerHid">
             <input type="hidden" id="tradesumoflastmonthCustmomerHid">
@@ -332,7 +334,7 @@
             <div class="col-sm-2 increase" id="sing_id"><i class="fa fa-long-arrow-up" id="sign_1"></i></div>
             <div class="col-sm-5 no-padding text-center"><p class="increase" id="customer_month_ratio"></p>环比</div>
           </div>
-          <div class="col-sm-6">
+          <div class="info_bottom_dl info_bottom_right col-sm-6 pull-right">
             <h4 class="gaugetb2" id="sing_id_4">本月订单量</h4>
             <input type="hidden" id="tradesumofmonthOrderHid">
             <input type="hidden" id="tradesumoflastmonthOrderHid">
@@ -340,24 +342,35 @@
             <div class="col-sm-2 increase" id="sing_id4"><i class="fa  fa-long-arrow-up" id="sign_4"></i></div>
             <div class="col-sm-5 no-padding text-center"><p class="increase" id="order_count_ratio"></p>环比</div>
           </div>
-          <div class="col-sm-6">
-            <h4 class="gaugetb2" id="sing_id_2">历史总用户量</h4>
-            <input type="hidden" id="tradesumofhistoryCustmomerHid">
-            <input type="hidden" id="tradesumoflasthistoryCustmomerHid">
-            <div class="col-sm-4 no-padding gaugetb2" id="tradesumofhistoryCustmomer"></div>
-            <!-- <div class="col-sm-2 decline" id="sing_id2"><i class="fa fa-long-arrow-down" id="sign_2"></i></div>
-            <div class="col-sm-5 no-padding text-center"><p class="decline" id="customer_history_ratio"></p>环比</div>
-             -->
+          <div class="info_bottom_dl info_bottom_right col-sm-6 pull-right">
+          	<h4 class="gaugetb2">历史开卡用户量</h4>
+               <input type="hidden" id="openCardUserHistorycountHid">
+              <div class="col-sm-4 no-padding gaugetb2" id="openCardUserHistorycount"></div>
           </div>
-          <div class="col-sm-6">
-            <h4 class="gaugetb2" id="sing_id_3">历史总订单量</h4>
-            <input type="hidden" id="tradesumofhistoryOrderHid">
-            <div class="col-sm-4 no-padding gaugetb2" id="tradesumofhistoryOrder"></div>
-            <!-- <div class="col-sm-2 increase" id="sing_id3"><i class="fa fa-long-arrow-up" id="sign_3"></i></div>
-            <div class="col-sm-5 no-padding text-center"><p class="increase" id="order_history_ratio"></p>环比</div>
-             -->
+          <div class="info_bottom_dl info_bottom_right col-sm-6 pull-right-left">
+           	<h4 class="gaugetb2">新增开卡用户量</h4>
+              <input type="hidden" id="openCardUserMonthcountHid">
+              <div class="col-sm-4 no-padding gaugetb2" id="openCardUserMonthcount"></div>
           </div>
+		  <div class="info_bottom_dl info_bottom_left pull-right" style="display: none;">
+		  	    <h4 class="gaugetb2" id="sing_id_2">历史总用户量</h4>
+	            <input type="hidden" id="tradesumofhistoryCustmomerHid">
+	            <input type="hidden" id="tradesumoflasthistoryCustmomerHid">
+	            <div class="col-sm-4 no-padding gaugetb2" id="tradesumofhistoryCustmomer"></div>
+	            <!-- <div class="col-sm-2 decline" id="sing_id2"><i class="fa fa-long-arrow-down" id="sign_2"></i></div>
+	            <div class="col-sm-5 no-padding text-center"><p class="decline" id="customer_history_ratio"></p>环比</div>
+	             -->
+            </div>
+            <div class="info_bottom_dl info_bottom_left pull-right" style="display: none;">
+               <h4 class="gaugetb2" id="sing_id_3">历史总订单量</h4>
+	            <input type="hidden" id="tradesumofhistoryOrderHid">
+	            <div class="col-sm-4 no-padding gaugetb2" id="tradesumofhistoryOrder"></div>
+	            <!-- <div class="col-sm-2 increase" id="sing_id3"><i class="fa fa-long-arrow-up" id="sign_3"></i></div>
+	            <div class="col-sm-5 no-padding text-center"><p class="increase" id="order_history_ratio"></p>环比</div>
+	             -->
+            </div>
           </div>
+        </div>
         </div>
       </section>
       <section class="content-header clearfix" style="margin-top: 15px;">
@@ -390,6 +403,7 @@
       <div class="col-sm-3 no-padding">
         <div id="main2" style="width: 100%;height:300px;"></div>
         <div id="main11" style="width: 100%;height:300px;"></div>
+        <div class="gengduo2" id="turnover_customer_more"><a>更多</a></div>
         <!-- <div class="gengduo" id="businessDep_gmv_more"><a>更多</a></div> -->
       </div>
     </section>
