--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -387,7 +387,7 @@
           </div>
         <div id="main9" style="width: 100%;height:650px;"></div>
         <!--<div id="main10" style="width: 100%;height:400px;"></div>-->
-        <div class="box-body" style="position:relative;height:350px;top:7px;display:none" id="mapHeight">
+        <div class="box-body" style="position:relative;height:550px;margin-top:25px;margin-left:25px;margin-right:25px;display:none" id="mapHeight">
           <div id="mapContainer" style="background-color:rgba(0,0,0,0.5);border-radius:20px;z-index:120"></div>
           <div class="menu" id="TULI" style="display:none">
 			  <div class="legend" ><b>--</b></div>
