总部首页页面修改

--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -348,7 +348,7 @@
               <div class="col-sm-4 no-padding gaugetb2" id="openCardUserHistorycount"></div>
           </div>
           <div class="info_bottom_dl info_bottom_right col-sm-6 pull-right-left">
-           	<h4 class="gaugetb2">新增开卡用户量</h4>
+           	<h4 class="gaugetb2">本月新增开卡用户量</h4>
               <input type="hidden" id="openCardUserMonthcountHid">
               <div class="col-sm-4 no-padding gaugetb2" id="openCardUserMonthcount"></div>
           </div>
