--- a/WebContent/crm/user_member_view.html
+++ b/WebContent/crm/user_member_view.html
@@ -667,6 +667,7 @@ function resetSerachParam(){
     nowDate.setDate(nowDate.getDate()+parseInt(-1));
     var startDateStr = nowDate.getFullYear() + '/' + "01" + '/01'; 
 	$("#searchTime").val(startDateStr +"-"+ timeStr);
+	$("#data_choice").html("默认时期");
 
 }
    
