修改开卡社员提示信息

--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -382,7 +382,7 @@ var employeeId = decode64(getUrlParamByKey("e"));//员工编号/id
 	    }],
 	    tooltip: {
 	      trigger: 'item',
-	      formatter: "{a} <br/>{b} : {c} ({d}%)"
+	      formatter: "{b} : {c} ({d}%)"
 	    },
 	    series: [
 	    	{
