--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -580,8 +580,8 @@ var employeeId = decode64(getUrlParamByKey("e"));//员工编号/id
 	option5 = {
 			title: [{
 			      text: '出生地分布',
-			      left: '45%',
-			      top: '2%',
+			      left: '50%',
+			      top: '1%',
 			      textAlign: 'center',
 			      textBaseline: 'middle',
 			      textStyle: {
@@ -832,10 +832,11 @@ var showMemberRegist = function (dataServer){
 	        axisPointer : {            // 坐标轴指示器，坐标轴触发有效
 	            type : 'shadow'        // 默认为直线，可选为：'line' | 'shadow'
 	        },
-	        formatter: function (params){
+	        formatter: function (params)
+	        {
 	            return params[0].name + '<br/>'
-	                   + params[0].seriesName + ' : ' + params[0].value + '<br/>'
-	                   + params[1].seriesName + ' : ' + (params[1].value + params[0].value);
+	                   + params[0].marker+params[0].seriesName + ' : ' + params[0].value + '<br/>'
+	                   + params[1].marker+params[1].seriesName + ' : ' + (params[1].value + params[0].value);
 	        }
 	    },
 	    legend: {
