修改年龄段提示

--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -499,19 +499,19 @@ var employeeId = decode64(getUrlParamByKey("e"));//员工编号/id
 	    name: '1960年之前'
 	  }, {
 	    value: dataServer.age70,
-	    name: '61-70年'
+	    name: '60后'
 	  }, {
 	    value: dataServer.age80,
-	    name: "71-80年"
+	    name: "70后"
 	  }, {
 	    value: dataServer.age90,
-	    name: "81-90年"
+	    name: "80后"
 	  }, {
 	    value: dataServer.age00,
-	    name: "91-00年"
+	    name: "90后"
 	  }, {
 	    value: dataServer.ageNow,
-	    name: "01-至今"
+	    name: "00后-至今"
 	  }];
 	  echarts.util.each(originalData, function(item, index) {
 	    item.itemStyle = {
