--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -326,42 +326,42 @@
         <div class="box no-border">
           <div class="box-header h4 text-right" style="margin-bottom: -20px; margin-top:0;font-size: 12px;cursor: pointer;color: #747474" id="customer_analysis_more">更多</div>
           <div class="box-body no-padding">
-            <div class="info_bottom_dl info_bottom_right pull-right col-sm-6">
-              <h4 class="gaugetb2">本月消费用户数</h4>
+            <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
+              <h4 class="gaugetb3">本月消费用户数</h4>
 			  <input type="hidden" id="tradesumofmonthCustmomerHid">
               <input type="hidden" id="tradesumoflastmonthCustmomerHid">
-              <div class="col-sm-4 no-padding gaugetb2" id="tradesumofmonthCustmomer"></div>
+              <div class="col-sm-4 no-padding gaugetb3" id="tradesumofmonthCustmomer"></div>
               <div class="col-sm-2 increase" id="sing_id"><i class="fa fa-long-arrow-up" id="sign_1"></i></div>
               <div class="col-sm-5 no-padding text-center"><p class="increase" id="customer_month_ratio"></p>环比</div>
             </div>
-            <div class="info_bottom_dl info_bottom_right pull-right col-sm-6">
+            <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
               <h4 class="gaugetb2">本月新增社员</h4>
 			  <input type="hidden" id="openCardUserMonthcountHid">
               <div class="col-sm-4 no-padding gaugetb2" id="openCardUserMonthcount"></div>
             </div>
-            <div class="info_bottom_dl info_bottom_left pull-right col-sm-4" style="display: none;">
-              <h4 class="gaugetb3">本月成交单量</h4>
+            <div class="info_bottom_dl info_bottom_left pull-right col-sm-4 no-margin" style="display: none;">
+              <h4 class="gaugetb4">本月成交单量</h4>
 			  <input type="hidden" id="tradesumofmonthOrderHid">
               <input type="hidden" id="tradesumoflastmonthOrderHid">
-              <div class="col-sm-4 no-padding gaugetb3" id="tradesumofmonthOrder"></div>
-              <div class="col-sm-2 decline" id="sing_id4"><i class="fa fa-long-arrow-down" id="sign_4"></i></div>
-              <div class="col-sm-5 no-padding text-center"><p class="decline" id="order_count_ratio"></p>环比</div>
+              <div class="col-sm-4 no-padding gaugetb4" id="tradesumofmonthOrder"></div>
+              <div class="col-sm-2 increase" id="sing_id4"><i class="fa fa-long-arrow-down" id="sign_4"></i></div>
+              <div class="col-sm-5 no-padding text-center"><p class="increase" id="order_count_ratio"></p>环比</div>
             </div>
-            <div class="info_bottom_dl info_bottom_right pull-right col-sm-6">
-            <h4 class="gaugetb3">历史累计社员</h4>
-			  <input type="hidden" id="openCardUserHistorycountHid">
-              <div class="col-sm-4 no-padding gaugetb3" id="openCardUserHistorycount"></div>
-            </div>
-            <div class="info_bottom_dl info_bottom_right pull-right col-sm-6">
+            <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
               <h4 class="gaugetb3">历史累计消费用户数</h4>
 			  <input type="hidden" id="tradesumofhistoryCustmomerHid"/>
 	          <input type="hidden" id="tradesumoflasthistoryCustmomerHid"/>
               <div class="col-sm-4 no-padding gaugetb3" id="tradesumofhistoryCustmomer"></div>
             </div>
-            <div class="info_bottom_dl info_bottom_left pull-right col-sm-4" style="display: none;">
-              <h4 class="gaugetb3">历史累计成交单量</h4>
+            <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
+            <h4 class="gaugetb2">历史累计社员</h4>
+			  <input type="hidden" id="openCardUserHistorycountHid">
+              <div class="col-sm-4 no-padding gaugetb2" id="openCardUserHistorycount"></div>
+            </div>
+            <div class="info_bottom_dl info_bottom_left pull-right col-sm-4 no-margin" style="display: none;">
+              <h4 class="gaugetb4">历史累计成交单量</h4>
 			  <input type="hidden" id="tradesumofhistoryOrderHid">
-              <div class="col-sm-4 no-padding gaugetb3" id="tradesumofhistoryOrder"></div>
+              <div class="col-sm-4 no-padding gaugetb4" id="tradesumofhistoryOrder"></div>
             </div>
           </div>
         </div>
