总部首页新增社员修改

--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -327,7 +327,7 @@
           <div class="box-header h4 text-right" style="margin-bottom: -20px; margin-top:0;font-size: 12px;cursor: pointer;color: #747474" id="customer_analysis_more">更多</div>
           <div class="box-body no-padding">
             <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
-              <h4 class="gaugetb3">本月消费用户数</h4>
+              <h4 class="gaugetb3">本月消费用户</h4>
 			  <input type="hidden" id="tradesumofmonthCustmomerHid">
               <input type="hidden" id="tradesumoflastmonthCustmomerHid">
               <div class="col-sm-4 no-padding gaugetb3" id="tradesumofmonthCustmomer"></div>
@@ -348,7 +348,7 @@
               <div class="col-sm-5 no-padding text-center"><p class="increase" id="order_count_ratio"></p>环比</div>
             </div>
             <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
-              <h4 class="gaugetb3">历史累计消费用户数</h4>
+              <h4 class="gaugetb3">历史累计消费用户</h4>
 			  <input type="hidden" id="tradesumofhistoryCustmomerHid"/>
 	          <input type="hidden" id="tradesumoflasthistoryCustmomerHid"/>
               <div class="col-sm-4 no-padding gaugetb3" id="tradesumofhistoryCustmomer"></div>
