修改安心合作社动销图标

--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -104,7 +104,7 @@
                 <li><i class="fa fa-database"></i>GMV：￥<span id="cmGoodsTurnover"></span></li>
                 <li><i class="fa fa-bank"></i>E店总数：<span id="eShopCount"></span></li>
                 <li><i class="fa fa-cube"></i>SKU总数：<span id="skuCount"></span></li>
-                <li><i class="fa fa-cube"></i>SKU动销：<span id="movingPinCount"></span></li>
+                <li><i class="fa fa-delicious"></i>SKU动销：<span id="movingPinCount"></span></li>
               </ul>
             </div>
           </div>
@@ -164,7 +164,7 @@
              <div class="box box-default">
           <div class="box-body">
             <div class="col-sm-7 no-padding">
-              <h4 class="box-header h4 text-light-blue"><strong>e店排名</strong></h4>
+              <h4 class="box-header h4 text-light-blue"><strong>e店排行榜</strong></h4>
               <table class="table table-bordered">
                 <tbody id="eshop_data">
                 <tr>
