添加门店类型

--- a/WebContent/data_access/add_store.html
+++ b/WebContent/data_access/add_store.html
@@ -162,7 +162,7 @@ function initview(){
 									a.options[9].selected = true;
 								}
 								$(".bixuan").hide();
-								//$("#storetype").attr("disabled","true");
+								$("#storetype").attr("disabled","true");
 							}else if(va!='V'&&nature=='合作店'){
 								$(".bixuan").show();
 								$(".natter").hide();
@@ -264,7 +264,7 @@ function initview(){
 									a.options[9].selected = true;
 								}
 								$(".bixuan").hide();
-								//$("#storetype").attr("disabled","true");
+								$("#storetype").attr("disabled","true");
 							}else if(va!='V'&&nature=='合作店'){
 								$(".bixuan").show();
 								$(".natter").hide();
