--- a/WebContent/hr/send_message_list.html
+++ b/WebContent/hr/send_message_list.html
@@ -214,6 +214,11 @@ Date.prototype.format=function(fmt) {
         text-align: center;
     }
     .but input{background-color:transparent; border:1px solid #fff; border-radius:3px; padding:0 13px; margin-right:30px;}
+    
+    .display{
+    	width:100%;
+    }
+    
 </style>
 <body style="height: 100%">
 <div class="panel panel-default" style="margin: 10px">
